--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ idna==3.10
 loguru==0.7.3
 mysql-connector-python==9.3.0
 openpyxl==3.1.5
+pandas
 pillow==11.2.1
 pymemcache==4.0.0
 python-dotenv==1.1.0
